--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-login></app-login>
-
+<app-quiz></app-quiz>
 <router-outlet></router-outlet>
