--- a/Front/src/app/app.component.html
+++ b/Front/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-login></app-login>
-<app-quiz></app-quiz>
+<!-- <app-dashbord></app-dashbord> -->
+
+
+<!-- <app-login></app-login> -->
+<!-- <app-quiz></app-quiz> -->
 <router-outlet></router-outlet>
