--- a/Front/src/app/dashbord/dashbord.component.html
+++ b/Front/src/app/dashbord/dashbord.component.html
@@ -270,34 +270,7 @@
       <div class="container-fluid  dashboard-content">
         <div class="row">
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-            <div class="card">
-              <h5 class="card-header">Basic Table</h5>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-bordered first">
-                    <thead>
-                      <tr>
-                        <th>Name</th>
-                        <th>Prénom</th>
-                        <th>Tél</th>
-                        <th>Niveau</th>
-                        <th>Action</th>
-
-                      </tr>
-                    </thead>
-                    <tbody *ngFor="let Coach of Coachs">
-                      <tr>
-                        <td>{{Coach.nom}}</td>
-                        <td>{{Coach.prenom}}</td>
-                        <td>{{Coach.tel}}</td>
-                        <td>{{Coach.niveau}}</td>
-                        <td></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
+            <app-coach></app-coach>
           </div>
           <!-- ============================================================== -->
           <!-- end basic table  -->
