--- a/Front/src/app/dashbord/candidat/candidat.component.html
+++ b/Front/src/app/dashbord/candidat/candidat.component.html
@@ -1,3 +1,112 @@
-<p>
-  candidat works!
-</p>
+<div class="card">
+  <h5 class="card-header">Basic Table</h5>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered first">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Prénom</th>
+            <th>Tél</th>
+            <th>Age</th>
+            <th>Niveau</th>
+            <th>Status</th>
+            <th>Etat</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let candidat of candidats">
+          <tr>
+            <td>{{candidat.nom}}</td>
+            <td>{{candidat.prenom}}</td>
+            <td>{{candidat.tel}}</td>
+            <td>{{candidat.age}}</td>
+            <td>{{candidat.niveau}}</td>
+            <td>{{candidat.status}}</td>
+            <td>{{candidat.etat}}</td>
+            <td>
+                <a (click)="update(candidat)"  data-target="#candidat" class="btn btn-rounded btn-info"><i class="fas fa-pencil-alt"></i></a>
+                <a (click)="deleteCandidat(candidat)" class="btn btn-rounded btn-secondary"><i class="fas fa-trash"></i></a>
+              <div class="modal fade" id="candidat" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLongTitle">Modifier Candidats
+                      </h5>
+
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <form class="form-horizontal" role="form" [formGroup]="ModiFormCandidats">
+                        <!-- Text input-->
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">nom</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="nom" placeholder="nom candidat" class="form-control">
+                          </div>
+                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">Prenom</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="prenom" placeholder="prenom candidat"
+                              class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">tel</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="tel" placeholder="tel candidat" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">Age</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="age" placeholder="age candidat" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">Niveau</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="niveau" placeholder="niveau candidat"
+                              class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">Statu</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="status" placeholder="statu candidat"
+                              class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">Etat</label>
+                          <div class="col-sm-10">
+                            <input type="text" formControlName="niveau" placeholder="niveau candidat"
+                              class="form-control">
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+
+                  <div class="modal-footer">
+                    <div class="pull-right">
+                      <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                      <button type="submit" class="btn btn-danger " data-dismiss="modal"
+                        (click)="updateCandidat(candidat)">Modifier</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
