--- a/Front/src/app/dashbord/coach/coach.component.html
+++ b/Front/src/app/dashbord/coach/coach.component.html
@@ -20,14 +20,14 @@
             <td>{{Coach.tel}}</td>
             <td>{{Coach.niveau}}</td>
             <td>
-              <a class="btn btn-info" data-toggle="modal" data-target="#Coach" (click)="update(Coach)">Modifier</a>
-
+              <a (click)="update(Coach)" data-target="#Coach" class="btn btn-rounded btn-info"><i class="fas fa-pencil-alt"></i></a>
+              <a (click)="deleteCoach(Coach)" class="btn btn-rounded btn-secondary"><i class="fas fa-trash"></i></a>
               <div class="modal fade" id="Coach" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLongTitle">Modifier Article<Article></Article>
+                      <h5 class="modal-title" id="exampleModalLongTitle">Modifier Coach
                       </h5>
 
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
