--- a/Front/src/app/dashbord/coach/coach.component.html
+++ b/Front/src/app/dashbord/coach/coach.component.html
@@ -9,6 +9,7 @@
             <th>Prénom</th>
             <th>Tél</th>
             <th>Niveau</th>
+            <th>Email</th>
             <th>Action</th>
 
           </tr>
@@ -20,7 +21,15 @@
             <td>{{Coach.tel}}</td>
             <td>{{Coach.niveau}}</td>
             <td>
-              <a (click)="update(Coach)" data-target="#Coach" class="btn btn-rounded btn-info"><i class="fas fa-pencil-alt"></i></a>
+              <div *ngFor="let user of users">
+                <div *ngIf="user.coach == Coach._id">
+                  {{user.email}}
+                </div>
+              </div>
+            </td>
+            <td>
+              <a (click)="update(Coach)" data-toggle="modal" data-target="#Coach" class="btn btn-rounded btn-info"><i
+                  class="fas fa-pencil-alt"></i></a>
               <a (click)="deleteCoach(Coach)" class="btn btn-rounded btn-secondary"><i class="fas fa-trash"></i></a>
               <div class="modal fade" id="Coach" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
                 aria-hidden="true">
@@ -58,19 +67,24 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textinput">niveau</label>
+                          <label class="col-sm-3 control-label" for="textinput">Niveau</label>
                           <div class="col-sm-10">
                             <input type="text" formControlName="niveau" placeholder="niveau coach" class="form-control">
                           </div>
                         </div>
-
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="textinput">Email</label>
+                            <div class="col-sm-10">
+                              <input type="text" formControlName="email" placeholder="email coach" class="form-control">
+                            </div>
+                          </div>
                       </form>
                     </div>
                     <div class="modal-footer">
                       <div class="pull-right">
                         <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-danger " data-dismiss="modal"
-                          (click)="updateCoach(Coach)">Modifier</button>
+                          (click)="updateCoach(ModiFormCoach.value)">Modifier</button>
                       </div>
                     </div>
                   </div>
