--- a/Front/src/app/dashbord/candidat/candidat.component.html
+++ b/Front/src/app/dashbord/candidat/candidat.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h5 class="card-header">Basic Table</h5>
+  <h5 class="card-header">Liste des Candidats</h5>
   <div class="card-body">
     <div class="table-responsive">
       <table class="table table-striped table-bordered first">
@@ -9,6 +9,7 @@
             <th>Prénom</th>
             <th>Tél</th>
             <th>Age</th>
+            <th>Email</th>
             <th>Niveau</th>
             <th>Status</th>
             <th>Etat</th>
@@ -21,11 +22,17 @@
             <td>{{candidat.prenom}}</td>
             <td>{{candidat.tel}}</td>
             <td>{{candidat.age}}</td>
+            <td><div *ngFor="let user of users">
+              <div *ngIf="user.candidat == candidat._id">
+                {{user.email}}
+              </div>
+            </div></td>
             <td>{{candidat.niveau}}</td>
             <td>{{candidat.status}}</td>
             <td>{{candidat.etat}}</td>
             <td>
-                <a (click)="update(candidat)"  data-target="#candidat" class="btn btn-rounded btn-info"><i class="fas fa-pencil-alt"></i></a>
+                <a (click)="updateStatuCandidat(candidat)" class="btn btn-rounded btn-brand"><i class="fas fa-key"></i></a>
+                <a (click)="update(candidat)"  data-target="#candidat" data-toggle="modal"  class="btn btn-rounded btn-info"><i class="fas fa-pencil-alt"></i></a>
                 <a (click)="deleteCandidat(candidat)" class="btn btn-rounded btn-secondary"><i class="fas fa-trash"></i></a>
               <div class="modal fade" id="candidat" tabindex="-1" role="dialog"
                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -34,7 +41,6 @@
                     <div class="modal-header">
                       <h5 class="modal-title" id="exampleModalLongTitle">Modifier Candidats
                       </h5>
-
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
@@ -43,7 +49,7 @@
                       <form class="form-horizontal" role="form" [formGroup]="ModiFormCandidats">
                         <!-- Text input-->
                         <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textinput">nom</label>
+                          <label class="col-sm-3 control-label" for="textinput">Nom</label>
                           <div class="col-sm-10">
                             <input type="text" formControlName="nom" placeholder="nom candidat" class="form-control">
                           </div>
@@ -57,52 +63,56 @@
                           </div>
                         </div>
                         <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textinput">tel</label>
+                          <label class="col-sm-3 control-label" for="textinput">Tel</label>
                           <div class="col-sm-10">
-                            <input type="text" formControlName="tel" placeholder="tel candidat" class="form-control">
+                            <input type="number" formControlName="tel" placeholder="tel candidat" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-3 control-label" for="textinput">Age</label>
                           <div class="col-sm-10">
-                            <input type="text" formControlName="age" placeholder="age candidat" class="form-control">
+                            <input type="number" formControlName="age" placeholder="age candidat" class="form-control">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label" for="textinput">Email</label>
+                          <div class="col-sm-10">
+                            <input type="email" formControlName="email" placeholder="email candidat" class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-3 control-label" for="textinput">Niveau</label>
                           <div class="col-sm-10">
-                            <input type="text" formControlName="niveau" placeholder="niveau candidat"
+                            <input type="number" formControlName="niveau" placeholder="niveau candidat"
                               class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-3 control-label" for="textinput">Statu</label>
                           <div class="col-sm-10">
-                            <input type="text" formControlName="status" placeholder="statu candidat"
+                            <input type="text" formControlName="status" placeholder="Statu candidat"
                               class="form-control">
                           </div>
                         </div>
                         <div class="form-group">
                           <label class="col-sm-3 control-label" for="textinput">Etat</label>
                           <div class="col-sm-10">
-                            <input type="text" formControlName="niveau" placeholder="niveau candidat"
+                            <input type="text" formControlName="etat" placeholder="Etat candidat"
                               class="form-control">
                           </div>
                         </div>
                       </form>
                     </div>
-                  </div>
-
                   <div class="modal-footer">
                     <div class="pull-right">
                       <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
                       <button type="submit" class="btn btn-danger " data-dismiss="modal"
-                        (click)="updateCandidat(candidat)">Modifier</button>
+                        (click)="updateCandidat(ModiFormCandidats.value)">Modifier</button>
                     </div>
                   </div>
                 </div>
               </div>
-              
+            </div>
             </td>
           </tr>
         </tbody>
