--- a/Front/src/app/dashbord/coach/coach.component.html
+++ b/Front/src/app/dashbord/coach/coach.component.html
@@ -1,11 +1,11 @@
 <div class="card">
-  <h5 class="card-header">Basic Table</h5>
+  <h5 class="card-header">Liste des Coachs</h5>
   <div class="card-body">
     <div class="table-responsive">
       <table class="table table-striped table-bordered first">
         <thead>
           <tr>
-            <th>Name</th>
+            <th>Nom</th>
             <th>Prénom</th>
             <th>Tél</th>
             <th>Niveau</th>
@@ -47,7 +47,7 @@
                       <form class="form-horizontal" role="form" [formGroup]="ModiFormCoach">
                         <!-- Text input-->
                         <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textinput">nom</label>
+                          <label class="col-sm-3 control-label" for="textinput">Nom</label>
                           <div class="col-sm-10">
                             <input type="text" formControlName="nom" placeholder="nom Coach" class="form-control">
                           </div>
@@ -77,7 +77,7 @@
                             <div class="col-sm-10">
                               <input type="text" formControlName="email" placeholder="email coach" class="form-control">
                             </div>
-                          </div>
+                        </div>
                       </form>
                     </div>
                     <div class="modal-footer">
