authgard + cours Candidat

--- a/Front/src/app/dashbordCandidat/dashbordCandidat.component.html
+++ b/Front/src/app/dashbordCandidat/dashbordCandidat.component.html
@@ -1,1 +1,3 @@
-<app-test-inscri-candidat></app-test-inscri-candidat>
+<!-- <app-test-inscri-candidat></app-test-inscri-candidat> -->
+<!-- <app-profil-candidat></app-profil-candidat> -->
+<app-cours-candidat></app-cours-candidat>
