--- a/Front/src/app/dashbordCandidat/cours-candidat/cours-candidat.component.html
+++ b/Front/src/app/dashbordCandidat/cours-candidat/cours-candidat.component.html
@@ -1,3 +1,64 @@
-<p>
-  cours-candidat works!
-</p>
+<div >
+    <div class="container py-5">
+      <div class="col-md-12">
+  
+        <div class="card">
+          <h5 class="card-header">Listes de Cours</h5>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered first">
+                <thead>
+                  <tr>
+                    <th>Titre</th>
+                    <th>Decreption</th>
+                    <th>Type</th>
+                    <th>Niveau</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>     
+                <tbody *ngFor="let c of cours">
+                  <tr>
+                    <td>{{c.titre}}</td>
+                    <td>{{c.descreption}}</td>
+                    <td>{{c.type}}</td>
+                    <td>{{c.niveau}}</td>
+                    <td>
+
+                      <a (click)="validerCours(c)" class="btn btn-rounded bg-success"><i class="fas fa-check-circle"></i></a>
+                      <a data-toggle="modal" (click)="getUrl(c)" data-target="#consulter"
+                        class="btn btn-rounded btn-primary"><i class="fas fa-file-pdf"></i></a>
+                      <div class="modal fade " id="consulter" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                          <div class="modal-content modall">
+                            <div class="modal-header">
+                              <h3 class="modal-title" id="exampleModalLongTitle">Cours {{selectesCour.titre}}
+                              </h3>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <object [data]="url" class="cours">
+                              </object>
+                              <a target="__blank"
+                                href="http://localhost:3000/cours/getContenue/{{selectesCour.contenue}}">Download</a>
+                            </div>
+                            <div class="modal-footer">
+                              <div class="pull-right">
+                                <button type="submit" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> 
