--- a/Front/src/app/dashbordCandidat/profil-candidat/profil-candidat.component.html
+++ b/Front/src/app/dashbordCandidat/profil-candidat/profil-candidat.component.html
@@ -1,20 +1,246 @@
-<div class="row" style="margin-top:40px; background-color:#eff0f2;
--webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
--moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);
-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);">
-  <!-- <div class="col-sm-12" style="text-align:center;">
-    Register
-  </div> -->
+<div *ngIf="user?.etat=== 'Accepter'">
+  <div class="container bootstrap snippet">
+    <div class="row">
+      <div class="col-sm-10">
+        <h1>{{user?.nom}} {{user?.prenom}}</h1>
+      </div>
+      <div class="col-sm-2"><img title="profile image" class="img-circle img-responsive"
+          src="http://www.gravatar.com/avatar/28fd20ccec6865e2d5f0e1f4446eb7bf?s=100"></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-9">
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+          <li><a data-toggle="tab" href="#notes">Notes</a></li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="home">
+            <div class="row">
+              <div class="col-md-6">
+                <label>Nom</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.nom}}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Prenom</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.prenom}}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Email</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.email}}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Age</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.age}}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Num Tel</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.tel}}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Niveau</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.niveau}}</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Statu</label>
+              </div>
+              <div class="col-md-6">
+                <p>{{user?.status}}</p>
+              </div>
+            </div>
+            <div class="rox">
+              <div class="text-center">
+                <a class="btn btn-info" data-toggle="modal" data-target="#user" (click)="update(User)">Modifier</a>
+                <div class="modal fade" id="user" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+                  aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Modifier User<Article></Article>
+                        </h5>
 
-  <div class="col-sm-12">
-      <div class="jumbotron">
-          <h1 class="display-4">Hello, {{username}}!</h1>
-          <p class="lead">You have successfully logged in to our system.</p>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <form class="form" action="##" method="post" [formGroup]="EditUser">
+                          <div class="form-group">
+                            <div class="col-xs-6">
+                              <label for="first_name">
+                                <h4>Nom</h4>
+                              </label>
+                              <input type="text" class="form-control" formControlName="nom" placeholder="first name"
+                                title="enter your first name if any.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-xs-6">
+                              <label for="last_name">
+                                <h4>Prenom</h4>
+                              </label>
+                              <input type="text" class="form-control" formControlName="prenom" placeholder="last name"
+                                title="enter your last name if any.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-xs-6">
+                              <label for="phone">
+                                <h4>Num Tel</h4>
+                              </label>
+                              <input type="number" class="form-control" formControlName="tel" placeholder="enter phone"
+                                title="enter your phone number if any.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-xs-6">
+                              <label for="mobile">
+                                <h4>Age</h4>
+                              </label>
+                              <input type="number" class="form-control" formControlName="age"
+                                placeholder="enter mobile number" title="enter your mobile number if any.">
+                            </div>
+                          </div>
+
+                          <div class="form-group">
+
+                            <div class="col-xs-6">
+                              <label for="email">
+                                <h4>Email</h4>
+                              </label>
+                              <input type="email" class="form-control" formControlName="email"
+                                placeholder="you@email.com" title="enter your email.">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-xs-12">
+                              <br>
+                              <button class="btn btn-lg btn-success" type="submit"><i
+                                  class="glyphicon glyphicon-ok-sign"></i>
+                                Save</button>
+                              <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i>
+                                Reset</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+                <!--/tab-pane-->
+                <div class="tab-pane" id="messages">
+                  <h2></h2>
+                  <hr>
+
+                </div>
+                <!--/tab-pane-->
+              </div>
+              <!--/tab-content-->
+            </div>
+            <!--/col-9-->
+          </div>
+          <div class="tab-pane " id="notes">
+            <div class="row">
+              <div class="card-body">
+                <h4>Test D'inscreption</h4>
+                <table class="table table-bordered">
+                  <thead>
+                    <tr>
+                      <th scope="col">
+                        Niveau
+                      </th>
+                      <th scope="col">
+                        Note
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        {{user?.niveau}}
+                      </td>
+                      <td>
+                        {{user?.marks}}
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <hr />
+            <div class="row">
+              <div class="card-body">
+                <h4>Notes des niveaux</h4>
+                <table class="table table-bordered">
+                  <thead>
+                    <tr>
+                      <th scope="col">
+                        Niveau
+                      </th>
+                      <th scope="col">
+                        Note
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let Note of user?.notes">
+                      <td>{{Note.niveau}}</td>
+                      <td>{{Note.note}}</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div *ngIf="user?.etat=== 'En attente'">
+  <div class="container bootstrap snippet">
+    <div class="row style">
+      <div class="col-sm-12">
+        <div class="jumbotron">
+          <h1 class="display-4">Bonjour, {{user?.prenom}} {{user?.nom}}!</h1>
+          <p class="lead">Vous vous êtes connecté avec succès à notre platforme.</p>
           <hr class="my-4">
-          <p>Thanks to bootstrap for making wonderful UI to make development fast.</p>
+          <p>Maintenant il vous reste que passer le test de niveau</p>
+          <p>Pour le passer <a  [routerLink]="['/dashbordCandidat/testInscrit']" routerLinkActive="active"> Cliquez-ici</a></p>
           <p class="lead" style="color:white;">
             <a class="btn btn-primary btn-lg" role="button" (click)="logout()">Log Out</a>
           </p>
         </div>
+      </div>
+    </div>
   </div>
+</div>
+<div *ngIf="user?.etat=== 'Refuser'">
+
 </div>
